added dark theme

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <nav class="nav__main">
       <!-- ANCHOR SVG GLOBE -->
       <svg
-        class="nav__logo"
+        class="nav__logo nav__logo--light"
         width="30"
         version="1.1"
         xmlns="http://www.w3.org/2000/svg"
@@ -148,6 +148,7 @@
             <a href="" class="nav__link nav__login">
               <!-- ANCHOR SVG star -->
               <svg
+                class="nav__icon"
                 width="15"
                 viewBox="-42 0 512 512.001"
                 xmlns="http://www.w3.org/2000/svg"
