added form styles

--- a/src/index.html
+++ b/src/index.html
@@ -169,6 +169,70 @@
         </div>
       </div>
     </nav>
+
+    <main class="sign__main">
+      <div class="forms__background">
+        <div class="forms__container">
+          <div class="forms__overlap"></div>
+          <form class="form" action="">
+            <h4 class="form__title">sign in</h4>
+            <section class="form__section form__sign-section">
+              <label class="form__label form__sign-label" for="login"
+                >login</label
+              >
+              <input
+                class="form__input"
+                type="text"
+                name="login"
+                id="login"
+                autocomplete="off"
+              />
+            </section>
+            <section class="form__section form__password-section">
+              <label class="form__label form__sign-password" for="password"
+                >password</label
+              >
+              <input
+                class="form__input"
+                type="password"
+                name="password"
+                id="password"
+              />
+            </section>
+            <section class="form__section">
+              <button class="form__submit" type="submit">Sign in</button>
+            </section>
+          </form>
+
+          <form class="form form__signUp" action="">
+            <h4 class="form__title">sign up</h4>
+            <section class="form__section">
+              <label class="form__label" for="login">login </label>
+              <input
+                class="form__input"
+                type="text"
+                name="login"
+                id="login"
+                autocomplete="off"
+              />
+            </section>
+            <section class="form__section">
+              <label class="form__label" for="password">password</label>
+              <input
+                class="form__input"
+                type="password"
+                name="password"
+                id="password"
+              />
+            </section>
+            <section class="form__section">
+              <button class="form__submit" type="submit">Sign Up</button>
+            </section>
+          </form>
+        </div>
+      </div>
+    </main>
+
     <!-- <main>
   <input type="text" id="navSearch" class="nav__input" autocomplete="off" />
 </main> -->
