--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
   <body>
     <!-- SECTION nav  -->
     <nav class="nav__main">
+      <!-- ANCHOR themecolor -->
+      <div class="nav__theme nav__theme--light">
+        <span class="nav__theme-slider nav__theme-slider--light"> </span>
+      </div>
       <!-- ANCHOR SVG GLOBE -->
       <svg
         class="nav__logo nav__logo--light"
@@ -164,69 +168,86 @@
             </a>
           </li>
         </ul>
-        <div class="nav__theme nav__theme--light">
-          <span class="nav__theme-slider nav__theme-slider--light"> </span>
-        </div>
       </div>
     </nav>
 
     <main class="sign__main">
       <div class="forms__background">
         <div class="forms__container">
-          <div class="forms__overlap"></div>
-          <form class="form" action="">
+          <div class="forms__overlap forms__overlap--right"></div>
+
+          <form class="form form__signIn form__display" action="">
             <h4 class="form__title">sign in</h4>
             <section class="form__section form__sign-section">
-              <label class="form__label form__sign-label" for="login"
+              <label class="form__label form__sign-label" for="SignIn-login"
                 >login</label
               >
               <input
                 class="form__input"
                 type="text"
-                name="login"
-                id="login"
+                name="SignIn-login"
+                id="SignIn-login"
                 autocomplete="off"
               />
             </section>
             <section class="form__section form__password-section">
-              <label class="form__label form__sign-password" for="password"
-                >password</label
+              <label
+                class="form__label form__sign-password"
+                for="SignIn-password"
               >
+                password
+              </label>
               <input
                 class="form__input"
                 type="password"
-                name="password"
-                id="password"
+                name="SignIn-password"
+                id="SignIn-password"
               />
             </section>
             <section class="form__section">
               <button class="form__submit" type="submit">Sign in</button>
             </section>
+            <section class="form__section">
+              <p class="form__note">
+                Don't have an account?
+                <span class="form__link signIn-link">
+                  Register
+                </span>
+              </p>
+            </section>
           </form>
 
-          <form class="form form__signUp" action="">
-            <h4 class="form__title">sign up</h4>
+          <form class="form form__signUp form__hide" action="">
+            <h4 class="form__title">Register</h4>
             <section class="form__section">
-              <label class="form__label" for="login">login </label>
+              <label class="form__label" for="signUp-login">login </label>
               <input
                 class="form__input"
                 type="text"
                 name="login"
-                id="login"
+                id="signUp-login"
                 autocomplete="off"
               />
             </section>
             <section class="form__section">
-              <label class="form__label" for="password">password</label>
+              <label class="form__label" for="signUp-password">password</label>
               <input
                 class="form__input"
                 type="password"
-                name="password"
-                id="password"
+                name="signUp-password"
+                id="signUp-password"
               />
             </section>
             <section class="form__section">
               <button class="form__submit" type="submit">Sign Up</button>
+            </section>
+            <section class="form__section">
+              <p class="form__note">
+                Back to
+                <span class="form__link signUp-link">
+                  Sign In
+                </span>
+              </p>
             </section>
           </form>
         </div>
