--- a/src/assets/pages/favorites.html
+++ b/src/assets/pages/favorites.html
@@ -196,6 +196,6 @@
         </div>
       </div>
     </footer> -->
-    <script src="../script/main.js"></script>
+    <script src="../script/favorite.js"></script>
   </body>
 </html>
