--- a/src/assets/pages/countries.html
+++ b/src/assets/pages/countries.html
@@ -8,7 +8,7 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="../style/style.css" />
   <script defer src="../script/theme.loader.js"></script>
-  <script src="https://unpkg.com/browse/d3@5.16.0/"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
   <title>Countries</title>
 </head>
 
@@ -133,7 +133,9 @@
     <div class="countries__search-container">
       <input type="text" id="search" class="countries__search" autocomplete="off" />
     </div>
-    <section class="countries__section"></section>
+    <section class="countries__section">
+      <svg width="400" height="1000" id="myMap"></svg>
+    </section>
   </main>
   <!-- SECTION footer  -->
   <!--     <footer class="footer__main">
