--- a/src/pages/countries.html
+++ b/src/pages/countries.html
@@ -129,22 +129,22 @@
       </ul>
     </div>
   </nav>
+  <nav class="countries__nav">
+    <ul class="countries__list">
+      <li class="countries__item countries__item--active countries__item-map">Map</li>
+      <li class="countries__item countries__item-table">Table</li>
+    </ul>
+  </nav>
+
   <main class="countries__main">
 
-    <nav class="countries__nav">
-      <ul class="countries__list">
-        <li class="countries__item countries__item--active countries__map">Map</li>
-        <li class="countries__item countries__table">Table</li>
-      </ul>
-    </nav>
-
-    <section style="display: none;" class="countries__section">
+    <section style="display: none;" class="countries__section countries__section-table">
       <div class="countries__search-container">
         <input type="text" id="search" class="countries__search" autocomplete="off" />
       </div>
     </section>
 
-    <section class="countries__section">
+    <section class="countries__section countries__section-map">
       <svg width="960" height="500" id="countriesMap"></svg>
     </section>
 
