map bug is fixed

--- a/src/pages/countries.html
+++ b/src/pages/countries.html
@@ -138,10 +138,11 @@
 
   <main class="countries__main">
 
-    <section style="display: none;" class="countries__section countries__section-table">
+    <section class="countries__section countries__section-table">
       <div class="countries__search-container">
         <input type="text" id="search" class="countries__search" autocomplete="off" />
       </div>
+      <div class="table__container"></div>
     </section>
 
     <section class="countries__section countries__section-map">
