theme loader bug fixed #3

--- a/src/pages/countries.html
+++ b/src/pages/countries.html
@@ -198,7 +198,7 @@
 
     </div>
   </footer>
-  <script defer src="../source/theme.loader.js"></script>
+  <script src="../source/theme.loader.js"></script>
   <script src="../source/country.js"></script>
 </body>
 
