--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script async src="./src/source/theme.loader.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="./src/style/style.css" />
@@ -144,6 +143,7 @@
       </div>
     </div>
   </main>
+  <script src="./src/source/theme.loader.js"></script>
   <script src="./src/source/index.js"></script>
 </body>
 
