changed style && added searing basic functionality

--- a/src/pages/countries.html
+++ b/src/pages/countries.html
@@ -140,10 +140,7 @@
 
     <section class="countries__section countries__section-table">
       <div class="countries__search-container">
-        <input list="countries__search-names" type="text" id="search" class="countries__search" autocomplete="off" />
-        <datalist id="countries__search-names">
-
-        </datalist>
+        <input type="text" id="search" class="countries__search" autocomplete="off" />
       </div>
       <div class="table__container"></div>
     </section>
