--- a/src/pages/countries.html
+++ b/src/pages/countries.html
@@ -141,6 +141,7 @@
     <section class="countries__section countries__section-table">
       <div class="countries__search-container">
         <input type="text" id="search" class="countries__search" autocomplete="off" />
+        <span class="search__alert" role="alert"></span>
       </div>
       <div class="table__container"></div>
     </section>
