--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
           <h4 class="form__title">Register</h4>
           <section class="form__section">
             <label class="form__label" for="signUp-login">login </label>
-            <input class="form__input" type="text" name="login" id="signUp-login" autocomplete="off" required />
+            <input class="form__input" type="text" name="login" id="signUp-login" autocomplete="off" required
+              minlength="5" />
           </section>
           <section class="form__section">
             <label class="form__label" for="signUp-password">password</label>
