--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="./src/style/style.css" />
+  <link rel="stylesheet" href="style/style.css" />
   <title>login</title>
 </head>
 
@@ -63,13 +63,13 @@
     <div class="l-nav__list-container nav__list-container--hide">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="./src/pages/countries.html" class="nav__link">
+          <a href="./pages/countries.html" class="nav__link">
             Countries
           </a>
         </li>
 
         <li class="nav__item">
-          <a href="./src/pages/favorites.html" class="nav__link">
+          <a href="./pages/favorites.html" class="nav__link">
             Favorites
           </a>
         </li>
@@ -144,8 +144,8 @@
       </div>
     </div>
   </main>
-  <script src="./src/source/theme.loader.js"></script>
-  <script src="./src/source/index.js"></script>
+  <script src="source/theme.loader.js"></script>
+  <script src="source/index.js"></script>
 </body>
 
 </html>
