added right links

--- a/src/pages/countries.html
+++ b/src/pages/countries.html
@@ -70,7 +70,7 @@
     <div class="l-nav__list-container nav__list-container--hide">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="./countries.html" class="nav__link nav__link--active">
+          <a href="countries.html" class="nav__link nav__link--active">
             <!-- ANCHOR SVG flag -->
             <svg width="15" class="nav__icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -91,7 +91,7 @@
         </li>
 
         <li class="nav__item">
-          <a href="./favorites.html" class="nav__link">
+          <a href="favorites.html" class="nav__link">
             <!-- ANCHOR SVG star -->
             <svg width="15" class="nav__icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512.001 512.001"
@@ -115,7 +115,7 @@
         </li>
 
         <li class="nav__item">
-          <a href="../../index.html" class="nav__link nav__login">
+          <a href="../index.html" class="nav__link nav__login">
             <!-- ANCHOR SVG star -->
             <svg class="nav__icon" width="15" viewBox="-42 0 512 512.001" xmlns="http://www.w3.org/2000/svg">
               <path
