--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -114,7 +114,7 @@
         </li>
 
         <li class="nav__item">
-          <a href="../../index.html" class="nav__link nav__login">
+          <a href="../index.html" class="nav__link nav__login">
             <!-- ANCHOR SVG star -->
             <svg class="nav__icon" width="15" viewBox="-42 0 512 512.001" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -128,32 +128,27 @@
       </ul>
     </div>
   </nav>
-  <main class="countries__main"></main>
+  <main class="favorites__main">
+
+  </main>
   <!-- SECTION footer  -->
-  <!--     <footer class="footer__main">
-    
-        <div>
-          icons were made by
-          <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
-            >Freepik</a
-          >
-          from
-          <a href="https://www.flaticon.com/" title="Flaticon">
-            www.flaticon.com</a
-          >
-        </div>
-        <div>
-          Logo was made by
-          <a href="https://www.flaticon.com/authors/turkkub" title="turkkub"
-            >turkkub</a
-          >
-          from
-          <a href="https://www.flaticon.com/" title="Flaticon"
-            >www.flaticon.com</a
-          >
-        </div>
-      </div>
-    </footer> -->
+  <footer class="footer__main">
+    <div>
+      icons were made by
+      <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
+      from
+      <a href="https://www.flaticon.com/" title="Flaticon">
+        www.flaticon.com</a>
+    </div>
+    <div>
+      Logo was made by
+      <a href="https://www.flaticon.com/authors/turkkub" title="turkkub">turkkub</a>
+      from
+      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </div>
+
+    </div>
+  </footer>
   <script src="../source/favorite.js"></script>
 </body>
 
