returned nav list

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,29 @@
         </g>
       </g>
     </svg>
+
+    <!-- SECTION nav list  -->
+    <div class="l-nav__list-container nav__list-container--hide">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a href="./pages/countries.html" class="nav__link">
+            Countries
+          </a>
+        </li>
+
+        <!--  <li class="nav__item">
+          <a href="pages/favorites.html" class="nav__link">
+            Favorites
+          </a>
+        </li> -->
+        <!-- 
+        <li class="nav__item">
+          <a href="./index.html" class="nav__link nav__login">
+            logOut
+          </a>
+        </li> -->
+      </ul>
+    </div>
   </nav>
 
   <main class="sign__main">
