changed styles of favorites.html and country.html

--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="../style/style.css" />
-  <script defer src="../source/theme.loader.js"></script>
   <title>Favorites</title>
 </head>
 
@@ -149,6 +148,7 @@
 
     </div>
   </footer>
+  <script src="../source/theme.loader.js"></script>
   <script src="../source/favorite.js"></script>
 </body>
 
