added meta tags for favicon, og tags, twitter card

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./assets/favicon/site.webmanifest">
+  <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <!-- ANCHOR og meta -->
+  <meta property="og:image" content="./assets/images/world-logo.svg">
+  <meta proerty="og:image:width" content='1500'>
+  <meta property="og:image:height" content="500" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:alt" content="Globe" />
+  <meta property="og:description" content="Globe on your hand">
+  <meta property="og:title" content="Globe on your hand">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://sabovyan.github.io/countries/" />
+  <!-- ANCHOR twitter cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="Login page">
+  <meta name="twitter:creator" content="@SargisAbovyan">
+  <meta name="twitter:title" content="Timeline">
+  <meta name="twitter:description" content="Your map is in your hand">
+  <meta name="twitter:image" content="./assets/images/world-logo.svg">
+  <meta name="twitter:image:alt" content="Logo">
+  <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet" />
+  <!-- style -->
   <link rel="stylesheet" href="style/style.css" />
   <title>login</title>
 </head>
