--- a/src/pages/countries.html
+++ b/src/pages/countries.html
@@ -225,8 +225,8 @@
 
     </div>
   </footer>
-  <script src="../source/theme.loader.js"></script>
-  <script src="../source/country.js"></script>
+  <script src="../theme.loader.js"></script>
+  <script src="../country.js"></script>
 </body>
 
 </html>
