--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -179,8 +179,8 @@
 
     </div>
   </footer>
-  <script src="../source/theme.loader.js"></script>
-  <script src="../source/favorite.js"></script>
+  <script src="../theme.loader.js"></script>
+  <script src="../favorite.js"></script>
 </body>
 
 </html>
